--- a/app/views/psd-general/inc_opss-team-list-design-only.html
+++ b/app/views/psd-general/inc_opss-team-list-design-only.html
@@ -1,104 +1,104 @@
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full govuk-!-margin-bottom-6">
+  <div class="govuk-grid-column-full govuk-!-margin-bottom-6">
 
-        <div class="govuk-grid-row">
-          <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
-              Your team<span class="govuk-visually-hidden">:</span> <span class="govuk-caption-l">Renfrewshire Council</span>
-            </h1>
-          </div>
-          <div class="govuk-grid-column-one-third govuk-!-margin-bottom-2">
-            <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
-              Invite another team member
-            </a>
-          </div>
-        </div>
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+        <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
+          Your team<span class="govuk-visually-hidden">:</span> <span class="govuk-caption-l">Renfrewshire Council</span>
+        </h1>
+      </div>
+      <div class="govuk-grid-column-one-third govuk-!-margin-bottom-2">
+        <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
+          Invite another team member
+        </a>
+      </div>
+    </div>
 
   </div>
 </div>
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+  <div class="govuk-grid-column-full">
 
 
-<table class="govuk-table opss-table opss-table--last-col-right">
-  <caption class="govuk-table__caption govuk-visually-hidden">Your team members</caption>
+    <table class="govuk-table opss-table opss-table--last-col-right">
+      <caption class="govuk-table__caption govuk-visually-hidden">Your team members</caption>
 
-  <thead class="govuk-table__head">
-    <tr class="govuk-table__row">
-      <th scope="col" class="govuk-table__header">Name</th>
-      <th scope="col" class="govuk-table__header govuk-!-width-one-half">Email</th>
-    </tr>
-  </thead>
+      <thead class="govuk-table__head">
+        <tr class="govuk-table__row">
+          <th scope="col" class="govuk-table__header">Name</th>
+          <th scope="col" class="govuk-table__header govuk-!-width-one-half">Email</th>
+        </tr>
+      </thead>
 
-  <tbody class="govuk-table__body">
-    <tr class="govuk-table__row">
-      <th scope="row" class="govuk-table__header">Bev Tolley</th>
-      <td class="govuk-table__cell">
-        <a href="mailto:bev.tolley@gmail.com" class="govuk-link govuk-link--no-visited-state">bev.tolley@gmail.com</a>
-      </td>
-    </tr>
-    <tr class="govuk-table__row">
-      <th scope="row" class="govuk-table__header">Bruce Fanshawe</th>
-      <td class="govuk-table__cell">
-        <a href="mailto:bruce.fanshawe@beis.gov.uk" class="govuk-link govuk-link--no-visited-state">bruce.fanshawe@beis.gov.uk</a>
-      </td>
-    </tr>
-    <tr class="govuk-table__row">
-      <th scope="row" class="govuk-table__header">Jessica Weatherby-blyth</th>
-      <td class="govuk-table__cell">
-        <a href="mailto:jessicacoalsworth" class="govuk-link govuk-link--no-visited-state">jessicacoalsworth@gmail.co.uk</a>
-      </td>
-    </tr>
-    <tr class="govuk-table__row">
-      <th scope="row" class="govuk-table__header">
-        David Brown<span class="govuk-visually-hidden">:</span>
-        <br>
-        <span class="govuk-!-font-size-16 govuk-!-font-weight-regular">
-          <span class="opss-icon opss-icon--tick opss-icon--16sm"></span>
-          Can invite team members
-        </span>
-      </th>
-      <td class="govuk-table__cell">
-        <a href="mailto:david.brown@yahoo.com" class="govuk-link govuk-link--no-visited-state">david.brown@yahoo.com</a>
+      <tbody class="govuk-table__body">
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">Bev Tolley</th>
+          <td class="govuk-table__cell">
+            <a href="mailto:bev.tolley@gmail.com" class="govuk-link govuk-link--no-visited-state">bev.tolley@gmail.com</a>
+          </td>
+        </tr>
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">Bruce Fanshawe</th>
+          <td class="govuk-table__cell">
+            <a href="mailto:bruce.fanshawe@beis.gov.uk" class="govuk-link govuk-link--no-visited-state">bruce.fanshawe@beis.gov.uk</a>
+          </td>
+        </tr>
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">Jessica Weatherby-blyth</th>
+          <td class="govuk-table__cell">
+            <a href="mailto:jessicacoalsworth" class="govuk-link govuk-link--no-visited-state">jessicacoalsworth@gmail.co.uk</a>
+          </td>
+        </tr>
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">
+            David Brown<span class="govuk-visually-hidden">:</span>
+            <br>
+            <span class="govuk-!-font-size-16 govuk-!-font-weight-regular">
+              <span class="opss-icon opss-icon--tick opss-icon--16sm"></span>
+              Can invite team members
+            </span>
+          </th>
+          <td class="govuk-table__cell">
+            <a href="mailto:david.brown@yahoo.com" class="govuk-link govuk-link--no-visited-state">david.brown@yahoo.com</a>
 
-      </td>
-    </tr>
-    <tr class="govuk-table__row">
-      <th scope="row" class="govuk-table__header">John Smith</th>
-      <td class="govuk-table__cell">
-        <a href="mailto:john.smith.gov.uk" class="govuk-link govuk-link--no-visited-state">john.smith@beis.gov.uk</a>
-      </td>
-    </tr>
-    <tr class="govuk-table__row">
-      <th scope="row" class="govuk-table__header">
-        <span class="govuk-visually-hidden">&mdash;</span>
-        <br>
-        <span class="govuk-!-font-size-16 govuk-!-font-weight-regular">
-          <span class="opss-icon opss-icon--alert opss-icon--16sm"></span>
-          Awaiting confirmation
-        </span>
-      </th>
-      <td class="govuk-table__cell">
-        <a href="mailto:joekane@gmail.co.uk" class="govuk-link govuk-link--no-visited-state">joekane@gmail.co.uk</a>
-        <span class="govuk-visually-hidden"> | </span><br>
-        <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 govuk-!-font-weight-bold">Resend invitation<span class="govuk-visually-hidden"> to Joe Kane</span></a>
-      </td>
-    </tr>
-  </tbody>
+          </td>
+        </tr>
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">John Smith</th>
+          <td class="govuk-table__cell">
+            <a href="mailto:john.smith.gov.uk" class="govuk-link govuk-link--no-visited-state">john.smith@beis.gov.uk</a>
+          </td>
+        </tr>
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">
+            <span class="govuk-visually-hidden">&mdash;</span>
+            <br>
+            <span class="govuk-!-font-size-16 govuk-!-font-weight-regular">
+              <span class="opss-icon opss-icon--alert opss-icon--16sm"></span>
+              Awaiting confirmation
+            </span>
+          </th>
+          <td class="govuk-table__cell">
+            <a href="mailto:joekane@gmail.co.uk" class="govuk-link govuk-link--no-visited-state">joekane@gmail.co.uk</a>
+            <span class="govuk-visually-hidden"> | </span><br>
+            <button class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 govuk-!-font-weight-bold">Resend invitation<span class="govuk-visually-hidden"> to Joe Kane</span></button>
+            <!--a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 govuk-!-font-weight-bold">Resend invitation<span class="govuk-visually-hidden"> to Joe Kane</span></a-->
+          </td>
+        </tr>
+      </tbody>
 
-  <!--tfoot class="govuk-table__head">
+      <!--tfoot class="govuk-table__head">
     <tr class="govuk-table__row">
       <th scope="col" class="govuk-table__header">Name</th>
       <th scope="col" class="govuk-table__header govuk-!-width-one-half">Email</th>
     </tr>
   </tfoot-->
 
-</table>
+    </table>
 
 
 
 
-    </div>
+  </div>
 </div>
-
