--- a/app/views/psd-revised-flow/design-assets-list.html
+++ b/app/views/psd-revised-flow/design-assets-list.html
@@ -421,6 +421,8 @@ List of page designs for revised PSD create a case journey
             </li>
             <li>All changes for the <a href="/psd-revised-flow/new-products-example_all" class="govuk-link govuk-link--no-visited-state" target="_blank">All products</a> - search' page
             </li>
+            <li>Assigned - <a href="/psd-revised-flow/assigned-cases" class="govuk-link govuk-link--no-visited-state" target="_blank">Assigned cases</a> - list page
+            </li>
             <li>Product record no longer exists <a href="/psd-revised-flow/case-product-no-match" class="govuk-link govuk-link--no-visited-state" target="_blank">404</a> - for retired product
                 records (CAP017)
             </li>
