--- a/app/assets/sass/psd-menu.scss
+++ b/app/assets/sass/psd-menu.scss
@@ -867,3 +867,16 @@
 }
 
 // *********** temporary override CSS for std GDS widths: ENDS ***************
+
+ul#navigation.psd-header__navigation {
+  display: block;
+  margin-left: 0 !important;
+
+  a {
+    font-weight: normal;
+  }
+
+  &[hidden] {
+    display: none;
+  }
+}
