--- a/app/views/cos-csv/csv-help.html
+++ b/app/views/cos-csv/csv-help.html
@@ -98,7 +98,7 @@ href: "#"
                 <li>An exact concentration (<span title="Percentage weight by weight">% w/w</span>) value is always
                     required
                 </li>
-                <li>A CAS number value is optional, but must always be numbers and dashes only and without spaces. (Provide only one CAS number per ingredient)
+                <li>A CAS number value is optional, but must only be numbers and dashes and without spaces. (Provide only one CAS number per ingredient)
                 </li>
                 <li>The fourth value is always set to true or false<span class="govuk-visually-hidden">. </span> <br class="opss-br-desktop">(The value is <kbd>true</kbd> if the
                     <abbr>NPIS</abbr> <em>does</em> need to
