--- a/app/views/psd-revised-flow/redirect-user.html
+++ b/app/views/psd-revised-flow/redirect-user.html
@@ -38,7 +38,7 @@ Go to the products area
                             <div class="govuk-details__text">
 
                                 <p class="govuk-body">
-                                    A case and a product record are separate. Cases record information about allegations, evidence, and corrective actions. A product record describes the product and is included <em>within</em>&nbsp; a case.
+                                    A case and a product record are separate. Cases record information about supply chains, evidence, and corrective actions. A product record describes the product and is included <em>within</em>&nbsp; a case.
                                 </p>
 
                                 <ol class="govuk-list govuk-list--number govuk-list--spaced govuk-!-margin-left-6">
