--- a/app/views/psd-revised-flow/online-sales/type-of-business-error.html
+++ b/app/views/psd-revised-flow/online-sales/type-of-business-error.html
@@ -81,18 +81,18 @@ href: "/cases/2303-0044"
             <!-- other starts -->
 
             <div class="govuk-radios__item">
-              <input id="business_type_other" name="business[type]" type="radio" value="other" class="govuk-radios__input" data-aria-controls="conditional-business_type_other" checked>
+              <input id="business_type_other" name="business[type]" type="radio" value="other" class="govuk-radios__input" data-aria-controls="conditional-business_type_other_name" checked>
               <label class="govuk-label govuk-radios__label" for="business_type_other">Other</label>
             </div>
-            <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-business_type_other">
+            <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-business_type_other_name">
               <div class="govuk-form-group govuk-form-group--error">
-                <label class="govuk-label" for="business_type_other">Descriptive name</label>
+                <label class="govuk-label" for="business_type_other_name">Descriptive name</label>
 
-                <p id="business_type_other-error" class="govuk-error-message">
+                <p id="business_type_other_name-error" class="govuk-error-message">
                   <span class="govuk-visually-hidden">Error:</span> Enter a descriptive name
                 </p>
 
-                <input class="govuk-input govuk-!-width-three-quarters" id="business_type_other" name="business[type_other]" type="text" aria-describedby="business_type_other-error">
+                <input class="govuk-input govuk-!-width-three-quarters" id="business_type_other_name" name="business[type_other_name]" type="text" aria-describedby="business_type_other_name-error">
               </div>
             </div>
             <!-- other ends -->
