new business form page

--- a/app/views/psd-revised-flow/online-sales/type-of-business-error-main.html
+++ b/app/views/psd-revised-flow/online-sales/type-of-business-error-main.html
@@ -36,8 +36,8 @@ href: "/cases/2303-0044"
 
     <form action="/cases/2303-0044/businesses/type" accept-charset="UTF-8" method="post" novalidate>
 
-      <input type="hidden" name="_method" value="put" autocomplete="off" />
-      <input type="hidden" name="authenticity_token" value="6ktJZfkgFw_LMZbBXd6ASBnarqHHwZrwuiX4BxWrYW-jUjf7Fot0w6UecL_TiT2YW37ZpWc-AWEe0_MtrdIt0Q" autocomplete="off" />
+      <input type="hidden" name="_method" value="put" />
+      <input type="hidden" name="authenticity_token" value="6ktJZfkgFw_LMZbBXd6ASBnarqHHwZrwuiX4BxWrYW-jUjf7Fot0w6UecL_TiT2YW37ZpWc-AWEe0_MtrdIt0Q" />
 
 
       <div class="govuk-form-group govuk-form-group--error">
