--- a/app/views/psd-revised-flow/online-sales/type-of-business.html
+++ b/app/views/psd-revised-flow/online-sales/type-of-business.html
@@ -42,6 +42,13 @@ Change error message 'Please enter a business type "Other"' to " Enter a descrip
 
 Update any reporting tools/reports?
 
+Update any reporting tools/reports?
+
+
+
+
+  On the 3x HIDDEN input elements which have attributes  autocomplete="off", please remove  autocomplete="off" from these hidden inputs (to validate the HTML)
+
 -->
 
 
@@ -51,8 +58,8 @@ Update any reporting tools/reports?
 
     <form action="/cases/2303-0044/businesses/type" accept-charset="UTF-8" method="post" novalidate>
 
-      <input type="hidden" name="_method" value="put" autocomplete="off" />
-      <input type="hidden" name="authenticity_token" value="6ktJZfkgFw_LMZbBXd6ASBnarqHHwZrwuiX4BxWrYW-jUjf7Fot0w6UecL_TiT2YW37ZpWc-AWEe0_MtrdIt0Q" autocomplete="off" />
+      <input type="hidden" name="_method" value="put" />
+      <input type="hidden" name="authenticity_token" value="6ktJZfkgFw_LMZbBXd6ASBnarqHHwZrwuiX4BxWrYW-jUjf7Fot0w6UecL_TiT2YW37ZpWc-AWEe0_MtrdIt0Q" />
 
 
       <div class="govuk-form-group">
