business address update

--- a/app/views/psd-revised-flow/online-sales/provide-business-details.html
+++ b/app/views/psd-revised-flow/online-sales/provide-business-details.html
@@ -63,10 +63,13 @@ href: "/cases/2303-0044"
         </div>
       </fieldset>
 
-      <fieldset class="govuk-fieldset govuk-!-margin-bottom-6">
+      <fieldset class="govuk-fieldset govuk-!-margin-bottom-6" aria-describedby="offical_address-hint">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-          Address
+          Offical address
         </legend>
+        <div class="govuk-hint govuk-!-font-size-16" id="offical_address-hint">
+          You can add additional addresses after you have added the business.
+        </div>
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="business_locations_attributes_0_address_line_1">
