latest updates for opss funding tix

--- a/app/views/psd-revised-flow/inner-home-page/home-01.html
+++ b/app/views/psd-revised-flow/inner-home-page/home-01.html
@@ -105,7 +105,7 @@ Home
                                 </span>
                             </span>
 
-                            Add further information to your case
+                            Add further information to the case
                         </h3>
 
                         <p class="govuk-body-s govuk-!-margin-bottom-1">
@@ -214,7 +214,7 @@ Home
             </ol>
 
             <p class="govuk-body-s govuk-!-margin-top-6 govuk-!-margin-bottom-3">
-                Cases record information about allegations, evidence, and corrective actions. A product record describes the product and is included within a case.
+                Cases record information about supply chains, evidence, and corrective actions. A product record describes the product and is included within a case.
             </p>
 
             <ol class="opss-step-nav__steps">
