--- a/app/views/psd-general/opss-sampling-protocol/add-test-report_start_with-date.html
+++ b/app/views/psd-general/opss-sampling-protocol/add-test-report_start_with-date.html
@@ -184,7 +184,7 @@ href: "#"
                 </div>
                 <div class="govuk-grid-column-one-quarter">
                     <div class="opss-text-align-right opss-margin-bottom-1-desktop">
-                        <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+                        <a href="add-test-report_01" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
                             Add<span class="govuk-visually-hidden">a test result</span>
                         </a>
                     </div>
