--- a/app/views/psd-revised-flow/online-sales/type-of-business-error-main.html
+++ b/app/views/psd-revised-flow/online-sales/type-of-business-error-main.html
@@ -50,7 +50,7 @@ href: "/cases/2303-0044"
           </legend>
 
           <div id="type-hint" class="govuk-hint govuk-!-margin-bottom-5">
-            What is the business role in the supply chain or as an economic operator?
+            What is the business role as an economic operator in the supply chain?
           </div>
 
           <p id="type-error" class="govuk-error-message">
