--- a/app/views/psd-revised-flow/online-sales/type-of-business.html
+++ b/app/views/psd-revised-flow/online-sales/type-of-business.html
@@ -35,7 +35,7 @@ href: "/cases/2303-0044"
           </legend>
 
           <div id="type-hint" class="govuk-hint govuk-!-margin-bottom-5">
-            What is the business role in the supply chain or as an economic operator?
+            What is the business role as an economic operator in the supply chain?
           </div>
 
           <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
