--- a/app/views/psd-revised-flow/case-trading-stds-landing-new-case.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-new-case.html
@@ -27,8 +27,7 @@ href: "#"
     </div>
     <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
         <div class="opss-text-align-right">
-            <a href="close-case.html"
-                class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+            <a href="close-case.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
                 Close case
             </a><!-- or, Re-open case -->
         </div>
@@ -71,8 +70,7 @@ href: "#"
 
         <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">Case overview</h2>
 
-        <dl
-            class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Case name
@@ -234,13 +232,11 @@ href: "#"
             Safety and compliance
         </h3>
 
-        <a href="edit-why-are-you-creating-a-case"
-            class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 govuk-!-margin-top-6 opss-float-right">
+        <a href="edit-why-are-you-creating-a-case" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 govuk-!-margin-top-6 opss-float-right">
             Edit<span class="govuk-visually-hidden"> the safety and compliance</span>
         </a>
 
-        <dl
-            class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Reported as
@@ -274,11 +270,10 @@ href: "#"
 
         <h4 class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-1 opss-secondary-text">
             <!--A product has not been added to this case-->
-            You can add this information after a product has been added to the case
+            You can add this information after a product has been added to the case.
         </h4>
 
-        <dl
-            class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Batch numbers
